# HungerCues

./: .gitignore  CHANGELOG.md  README.md  docker-compose.prod.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  baby_tracker.db  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1a2b3c4d5e6f_initial_base_tables.py  443e3ca5b076_create_milestones_table.py  9fd0d1a8b2c4_create_milestone_media_table.py
apps/backend/app/: config.py  database.py  main.py  worker.py
apps/backend/app/dependencies/: auth.py
apps/backend/app/jobs/: notification_scheduler.py
apps/backend/app/middleware/: rate_limit.py  security.py
apps/backend/app/models/: __init__.py  baby.py  device_token.py  diaper.py  feeding.py  growth.py  milestone.py  sleep.py  user.py
apps/backend/app/routers/v1/: __init__.py  activities.py  ai.py  auth.py  babies.py  diapers.py  feedings.py  growth.py  milestones.py  notifications.py  sleep.py
apps/backend/app/services/: cache.py  storage.py
apps/backend/app/services/ai/: client.py  schemas.py  service.py
apps/backend/app/tasks/: notifications.py
apps/backend/app/utils/: logging.py
apps/backend/tests/: conftest.py  test_app_config_extended.py  test_auth.py  test_cache.py  test_config.py  test_feedings.py  test_growth.py  test_logging.py  test_middleware.py  test_milestone_media.py  test_milestones.py  test_notifications.py  test_scheduler.py  test_soft_delete.py  test_storage.py
apps/mobile-app/: .gitignore  App.tsx  app.json  eas.json  index.ts  package-lock.json  package.json
apps/mobile-app/src/: api.ts
apps/mobile-app/src/components/: AddBabyModal.tsx  BabyProfileCard.tsx  BottomNav.tsx  DeletedActivitiesModal.tsx  EmptyState.tsx  ErrorBox.tsx  Header.tsx  HeroCard.tsx  NotificationsModal.tsx  QuickLogModal.tsx  ScalePress.tsx  SectionTitle.tsx  SegmentedControl.tsx  SidebarPanel.tsx  SkeletonCard.tsx  SleepTimerBanner.tsx  StatCard.tsx  SwipeableNotification.tsx  TimelineItem.tsx  Toast.tsx
apps/mobile-app/src/constants/: activityMeta.ts  colors.ts  designTokens.ts
apps/mobile-app/src/features/growth/: GrowthScreen.tsx
apps/mobile-app/src/features/history/: HistoryScreen.tsx
apps/mobile-app/src/features/home/: HomeScreen.tsx
apps/mobile-app/src/hooks/: useActiveSleepTimer.ts  useDeleteActivities.ts  useHistoryData.ts  useHomeData.ts  useMilestones.ts
apps/mobile-app/src/lib/: sentry.ts
apps/mobile-app/src/services/: apiClient.ts  babyService.ts  milestoneService.ts
apps/mobile-app/src/styles/: common.ts
apps/mobile-app/src/types/: index.ts
apps/mobile-app/src/utils/: date.ts  text.ts
docs/: disaster-recovery.md  git-workflow.md  licenses.md  privacy-policy.md  production_guidelines.md  project-specification.md  slo.md
docs/runbooks/: incident-response.md  rollback.md
docs/sbom/: sbom.json
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
nginx/: nginx.conf
nginx/conf.d/: app.conf
scripts/: backup-db.sh  bootstrap-vps.sh  smoke-test.sh
tests/load/: k6_basic.js
(+24 files in other folders)
