[project]
name = "baby-tracker-backend"
version = "0.1.0"
description = "Baby Tracker — FastAPI backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.0.0",
    "httpx>=0.27.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    "tenacity>=9.0.0",
    "aiosqlite>=0.20.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "slowapi>=0.1.9",
    "cryptography>=48.0.1",
    "msgpack>=1.2.1",
    "starlette>=1.3.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-json-logger>=2.0.0",
    "celery[redis]>=5.3.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long
    "E711",  # Comparison to None (standard in SQLAlchemy queries)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "pip-licenses>=5.5.5",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/database.py",           # DB bootstrap — tested implicitly
    "app/worker.py",             # Celery app instance — requires live Redis broker
    "app/tasks/notifications.py", # Celery task — requires live Redis broker
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Pyrefly (Meta's Python type-checker) configuration
# Docs: https://pyrefly.org/en/stable/configuration/
# ---------------------------------------------------------------------------
[tool.pyrefly]
# The tests/ directory uses pytest fixtures injected at runtime (db_module,
# async_client, pytest_asyncio decorators, etc.) which cannot be resolved
# statically. Excluding tests/ removes false-positive IDE errors without
# hiding real errors in the application code.
project-excludes = ["tests", ".venv", "migrations"]
python-interpreter-path = ".venv/Scripts/python.exe"
